--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>D3 Sample</title>
         <style></style>
         <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="http://joshfindit.github.io/Geometry-in-D3.js/GeometryinD3js-Functions.js"></script>
     </head>
 
     <body>
