Added button for SVG-Crowbar.js
Javascript that allows the visitor to download embedded SVGs

See nytimes.github.io/svg-crowbar/

Thanks to Hugoplz at http://stackoverflow.com/users/1974961/hugolpz

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
             // This is where the D3 code will go, using 'drawing' as the main element
         </script>
-
+        <a class="download" href="javascript:javascript: (function () %7B var e %3D document.createElement(%27script%27)%3B e.setAttribute(%27src%27, %27https://nytimes.github.io/svg-crowbar/svg-crowbar.js%27)%3B e.setAttribute(%27class%27, %27svg-crowbar%27)%3B document.body.appendChild(e)%3B %7D)()%3B"><!--⤋--><big>⇩</big>Download the SVG*</a>
     </body>
 </html>
